--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; November 5,2021, Elizabeth Oluwasanmi</p>
 	</footer>
 </body>
 </html>
