--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -74,7 +74,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; November 5, Elizabeth Oluwasanmi</p>
 	</footer>
 </body>
 </html>
